--- a/client/client/src/App.css
+++ b/client/client/src/App.css
@@ -60,3 +60,35 @@ Link {
     margin-left: 10px;
     cursor: pointer;
 }
+.homebg{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+.homecomp{
+    width: 100%;
+    height: 100%;
+    background:url("/bg.jpg");
+    position: absolute;
+    background-size:cover;
+    background-repeat: no-repeat;
+    padding: 200px;
+    justify-content: center;
+}
+.homebox{
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
+    width: auto;
+    height:fit-content;
+    padding: 30px;
+    opacity: .9;
+    border-radius: 10px;
+}
+.notebox{
+    margin: 10px;
+    padding: 10px;
+    background-color: rgba(105, 105, 105, 0.7);
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    border:1px solid rgb(166, 163, 163);
+}
